# screen-shoot-app

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  overlay.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: code-signing.md  performance-plan.md
src/: App.tsx  index.css  main.tsx  overlay-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/src/: capture.rs  clipboard.rs  history.rs  imaging.rs  lib.rs  main.rs  models.rs  overlay.rs  saving.rs
src/components/capture/: CaptureToolbar.tsx  MonitorPicker.tsx  WindowPicker.tsx
src/components/editor/: Editor.tsx  EditorToolbar.tsx
src/components/editor/shapes/: RedactNode.tsx  ShapeNode.tsx
src/components/history/: HistoryPanel.tsx  Thumbnail.tsx
src/components/overlay/: RegionOverlay.tsx
src/components/snippet/: SnippetEditor.tsx  SnippetToolbar.tsx
src/components/ui/: Button.tsx  ConfirmDialog.tsx  DropdownMenu.tsx  Header.tsx  Modal.tsx  Select.tsx  Slider.tsx  Titlebar.tsx  Toast.tsx  Tooltip.tsx
src/hooks/: useCapture.ts
src/i18n/: i18n.ts
src/i18n/locales/: ch.json  en.json  es.json  hi.json  my.json  zh.json
src/lib/: commands.ts  events.ts  export.ts  snippet.ts  types.ts  utils.ts
src/store/: captureStore.ts  editorStore.ts  historyStore.ts  snippetStore.ts  themeStore.ts
